AutomaticTestingArmenianChairDogsitting/Tests/NegativeTestSources/AnimalNegativeTestSources/RegisterAnimalByIncorrectRoleNegativeTest_ByAllIncorrectRoles_TestSource.cs
using AutomaticTestingArmenianChairDogsitting.Models.Request;
using System.Collections;

namespace AutomaticTestingArmenianChairDogsitting.Tests.NegativeTestSources.AnimalNegativeTestSources
{
    public class RegisterAnimalByIncorrectRoleNegativeTest_ByAllIncorrectRoles_TestSource : IEnumerable
    {
        public IEnumerator GetEnumerator()
        {
            yield return new AnimalRegistrationRequestModel()
            {
                Name = "Шарик",
                Age = 1,
                RecommendationsForCare = "Играть осторожно",
                Breed = "Доберман",
                Size = 5,
                ClientId = 1,
            };
        }
    }
}
